--- a/main.html
+++ b/main.html
@@ -1,16 +1,31 @@
-<!DOCTYPE html>
-
-<html>
-
+ <!DOCTYPE html>
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login Form</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div class="form-container">
+    <h1>Login Form</h1>
+    <form id="loginForm">
+      <!-- Add labels with 'for' attributes matching input ids -->
+      <label for="username">Username:</label>
+      <input type="text" id="username" placeholder="Username" required>
 
+      <label for="password">Password:</label>
+      <input type="password" id="password" placeholder="Password" required>
+
+      <div>
+        <input type="checkbox" id="checkbox">
+        <label for="checkbox">Remember me:</label>
+      </div>
+
+      <input type="submit" id="submit" value="Submit">
+    </form>
+    <button id="existing">Login as existing user</button>
+  </div>
+  <script src="script.js"></script>
 </body>
-
 </html>
